--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -1,3 +1,3 @@
 .MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
-    border-color: #B93B5E;
+border-color: #B93B5E !important;
 }
